(lang dune 2.8)
(name ppx_deriving_scad)
(generate_opam_files true)

(source (github geoffder/ppx_deriving_scad))
(license AGPL-3.0-or-later)
(authors "Geoff deRosenroll<geoffderosenroll@gmail.com>")
(maintainers "Geoff deRosenroll<geoffderosenroll@gmail.com>")
(package
  (name ppx_deriving_scad)
  (synopsis "PPX deriver for Scad_ml transformation functions.")
  (description ""))
